2010-04-15  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Release 2.2.138-1.

2010-04-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#157265 Phone application is not in forground when call is active

	When going back to the state before tklock, try keeping the call-ui
	in the foreground.

	* src/util/hd-dbus.c (hd_dbus_system_bus_signal_handler):
	  Watch call_state and activate another set of twisted logic
	  when there's an incoming call.
	* src/home/hd-render-manager.c (hd_render_manager_set_state):
	  Override hd_dbus_state_before_tklock with APP state under
	  said twisted circumstances.

2010-04-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#162969 Call UI is broken if lock & unlock T&K lock during
		  incoming call ringing in portrait view

	* src/home/hd-render-manager.c (hd_render_manager_set_state):
	  Don't go to HOME AFTER_TKLOCK unconditionally if the previous
	  state was HOME_PORTRAIT, but consider staying in that state.

2010-03-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Release 2.2.137-2.

2010-03-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	For NB#157265.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_may_be_portrait):
	  Ignore override-redirected windows when deciding about
	  portraitness.

2010-03-24  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Release 2.2.137-1.

2010-03-24  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#162056 Disable status menu in portrait mode

	Revert c79f88831fbb6671305833e9070476591a3c584f (Enable to activate
	status menu in portrait mode) because this is what they want as a
	workaround.

	* src/home/hd-render-manager.c (hd_render_manager_remove_input_blocker):
	  Block the status area again in portrait.

2010-03-15  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Release 2.2.136-1.

2010-03-15  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Attempt to stack animas correctly.  If we fail to do so then when you
	restart hd while imageviewer is running you'll get a nice black screen